0032423: Coding Rules - NSOpenGLContext deprecation warnings during compilation for macOS 10.14+

The warning has been suppressed for building TKOpenGl.